@@ -1,10 +1,10 @@
 package world.bentobox.challenges;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
@@ -27,32 +27,39 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import com.google.common.collect.ImmutableSet;
+
 import org.bukkit.Bukkit;
+import org.bukkit.Material;
 import org.bukkit.Server;
+import org.bukkit.Statistic;
 import org.bukkit.UnsafeValues;
 import org.bukkit.World;
+import org.bukkit.entity.EntityType;
+import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemFactory;
-import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.plugin.PluginManager;
 import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.Nullable;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+import org.mockbukkit.mockbukkit.MockBukkit;
+import org.mockbukkit.mockbukkit.ServerMock;
 import org.mockito.Mock;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
-import org.powermock.reflect.Whitebox;
+import org.mockito.MockedStatic;
+import org.mockito.Mockito;
+import org.mockito.MockitoAnnotations;
 
 import world.bentobox.bentobox.BentoBox;
 import world.bentobox.bentobox.api.addons.AddonDescription;
 import world.bentobox.bentobox.api.addons.GameModeAddon;
 import world.bentobox.bentobox.api.user.User;
 import world.bentobox.bentobox.database.DatabaseSetup.DatabaseType;
+import world.bentobox.bentobox.database.objects.Island;
 import world.bentobox.bentobox.managers.IslandWorldManager;
+import world.bentobox.bentobox.managers.IslandsManager;
 import world.bentobox.bentobox.managers.PlaceholdersManager;
 import world.bentobox.bentobox.util.Util;
 import world.bentobox.challenges.config.Settings;
@@ -72,8 +79,6 @@ import world.bentobox.challenges.utils.LevelStatus;
  *
  */
 @SuppressWarnings("deprecation")
-@RunWith(PowerMockRunner.class)
-@PrepareForTest({Bukkit.class, BentoBox.class, Util.class})
 public class ChallengesManagerTest {
 
     // Constants
@@ -110,14 +115,25 @@ public class ChallengesManagerTest {
     private String cName;
     private String levelName;
 
-    /**
-     * @throws java.lang.Exception
-     */
-    @Before
+    private AutoCloseable closeable;
+    private MockedStatic<Bukkit> mockedBukkit;
+    private MockedStatic<Util> mockedUtil;
+
+    @BeforeEach
     public void setUp() throws Exception {
+        closeable = MockitoAnnotations.openMocks(this);
+        ServerMock mbServer = MockBukkit.mock();
+        @SuppressWarnings("unused")
+        var unusedTagRef = org.bukkit.Tag.LEAVES;
+        // Database folder must exist before any DatabaseType class init,
+        // because YamlDatabaseConnector resolves it from BentoBox.getInstance().getDataFolder().
+        database = new File("database");
+        cleanupFiles();
+
         // Set up plugin
         BentoBox plugin = mock(BentoBox.class);
-        Whitebox.setInternalState(BentoBox.class, "instance", plugin);
+        when(plugin.getDataFolder()).thenReturn(new File("."));
+        WhiteBox.setInternalState(BentoBox.class, "instance", plugin);
         when(addon.getPlugin()).thenReturn(plugin);
         User.setPlugin(plugin);
 
@@ -128,10 +144,15 @@ public class ChallengesManagerTest {
         // Placeholders
         when(plugin.getPlaceholdersManager()).thenReturn(plhm);
 
+        // Force DatabaseType enum class init now, before any in-progress
+        // Mockito stubbing — its <clinit> calls plugin.getDataFolder() (a mock
+        // invocation), which would otherwise trip UnfinishedStubbingException.
+        DatabaseType jsonType = DatabaseType.JSON;
+
         // Settings for Database
         world.bentobox.bentobox.Settings s = mock(world.bentobox.bentobox.Settings.class);
         when(plugin.getSettings()).thenReturn(s);
-        when(s.getDatabaseType()).thenReturn(DatabaseType.JSON);
+        when(s.getDatabaseType()).thenReturn(jsonType);
 
         // Addon Settings
         settings = new Settings();
@@ -140,22 +161,15 @@ public class ChallengesManagerTest {
         settings.setStoreHistory(true);
         settings.setLifeSpan(10);
 
-        // Database
-        database = new File("database");
-        tearDown();
-
-        // Bukkit
-        PowerMockito.mockStatic(Bukkit.class);
-        when(Bukkit.getServer()).thenReturn(server);
-        when(Bukkit.getPluginManager()).thenReturn(pim);
-        when(Bukkit.getWorld(anyString())).thenReturn(world);
-
-        ItemMeta meta = mock(ItemMeta.class);
-        when(itemFactory.getItemMeta(any())).thenReturn(meta);
-        when(Bukkit.getItemFactory()).thenReturn(itemFactory);
+        // Bukkit — delegate to MockBukkit's real ItemFactory.
+        mockedBukkit = Mockito.mockStatic(Bukkit.class, Mockito.RETURNS_DEEP_STUBS);
+        mockedBukkit.when(Bukkit::getServer).thenReturn(server);
+        mockedBukkit.when(Bukkit::getPluginManager).thenReturn(pim);
+        mockedBukkit.when(() -> Bukkit.getWorld(anyString())).thenReturn(world);
+        mockedBukkit.when(Bukkit::getItemFactory).thenReturn(mbServer.getItemFactory());
         UnsafeValues unsafe = mock(UnsafeValues.class);
         when(unsafe.getDataVersion()).thenReturn(777);
-        when(Bukkit.getUnsafe()).thenReturn(unsafe);
+        mockedBukkit.when(Bukkit::getUnsafe).thenReturn(unsafe);
 
         // Challenge
         challenge = new Challenge();
@@ -176,8 +190,8 @@ public class ChallengesManagerTest {
         when(user.getUniqueId()).thenReturn(playerID);
 
         // Util
-        PowerMockito.mockStatic(Util.class);
-        when(Util.getWorld(any())).thenReturn(world);
+        mockedUtil = Mockito.mockStatic(Util.class, Mockito.CALLS_REAL_METHODS);
+        mockedUtil.when(() -> Util.getWorld(any())).thenReturn(world);
 
         // Addon
         AddonDescription desc = new AddonDescription.Builder("main", GAME_MODE_NAME, "1.0").build();
@@ -192,11 +206,17 @@ public class ChallengesManagerTest {
         cm = new ChallengesManager(addon);
     }
 
-    /**
-     * @throws java.lang.Exception
-     */
-    @After
+    @AfterEach
     public void tearDown() throws Exception {
+        if (mockedBukkit != null) mockedBukkit.closeOnDemand();
+        if (mockedUtil != null) mockedUtil.closeOnDemand();
+        if (closeable != null) closeable.close();
+        MockBukkit.unmock();
+        Mockito.framework().clearInlineMocks();
+        cleanupFiles();
+    }
+
+    private void cleanupFiles() throws IOException {
         new File("addon.jar").delete();
         new File("config.yml").delete();
         deleteAll(new File("addons"));
@@ -211,13 +231,8 @@ public class ChallengesManagerTest {
             .map(Path::toFile)
             .forEach(File::delete);
         }
-
     }
 
-    /**
-     * Test method for {@link ChallengesManager#load()}.
-     * @throws InterruptedException
-     */
     @Test
     public void testLoad() throws InterruptedException {
         verify(addon).log("Loading challenges...");
@@ -230,10 +245,6 @@ public class ChallengesManagerTest {
         assertTrue(cm.containsChallenge(cName));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#reload()}.
-     * @throws InterruptedException
-     */
     @Test
     public void testReload() throws InterruptedException {
         cm.reload();
@@ -246,121 +257,71 @@ public class ChallengesManagerTest {
         assertTrue(cm.containsChallenge(cName));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadChallenge(world.bentobox.challenges.database.object.Challenge, World, boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadChallengeNoOverwriteSilent() {
-        // load once
         assertTrue(cm.loadChallenge(challenge, world, false, user, true));
-        // load twice - no overwrite
         assertFalse(cm.loadChallenge(challenge, world, false, user, true));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadChallenge(world.bentobox.challenges.database.object.Challenge, World, boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadChallengeNoOverwriteNotSilent() {
-        // load once
         assertTrue(cm.loadChallenge(challenge, world, false, user, true));
-        // load twice - no overwrite, not silent
         assertFalse(cm.loadChallenge(challenge, world, false, user, false));
         verify(user).getTranslation(world, "challenges.messages.load-skipping", "[value]", "name");
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadChallenge(world.bentobox.challenges.database.object.Challenge, World, boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadChallengeOverwriteSilent() {
-        // load once
         assertTrue(cm.loadChallenge(challenge, world, false, user, true));
-        // overwrite
         assertTrue(cm.loadChallenge(challenge, world, true, user, true));
         verify(user, never()).getTranslation(any(World.class), anyString(), anyString(), anyString());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadChallenge(world.bentobox.challenges.database.object.Challenge, World, boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadChallengeOverwriteNotSilent() {
-        // load once
         assertTrue(cm.loadChallenge(challenge, world, false, user, true));
-        // overwrite not silent
         assertTrue(cm.loadChallenge(challenge, world, true, user, false));
         verify(user).getTranslation(world, "challenges.messages.load-overwriting", "[value]", "name");
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadLevel(world.bentobox.challenges.database.object.ChallengeLevel, World, boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadLevelNoOverwriteSilent() {
-        // load once
         assertTrue(cm.loadLevel(level, world, false, user, true));
-        // load twice - no overwrite
         assertFalse(cm.loadLevel(level, world, false, user, true));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadLevel(world.bentobox.challenges.database.object.ChallengeLevel, World, boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadLevelNoOverwriteNotSilent() {
-        // load once
         assertTrue(cm.loadLevel(level, world, false, user, true));
-        // load twice - no overwrite, not silent
         assertFalse(cm.loadLevel(level, world, false, user, false));
         verify(user).getTranslation(world, "challenges.messages.load-skipping", "[value]", "Novice");
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadLevel(world.bentobox.challenges.database.object.ChallengeLevel, World,  boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadLevelOverwriteSilent() {
-        // load once
         assertTrue(cm.loadLevel(level, world, false, user, true));
-        // overwrite
         assertTrue(cm.loadLevel(level, world, true, user, true));
         verify(user, never()).getTranslation(any(World.class), anyString(), anyString(), anyString());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#loadLevel(world.bentobox.challenges.database.object.ChallengeLevel, World, boolean, world.bentobox.bentobox.api.user.User, boolean)}.
-     */
     @Test
     public void testLoadLevelOverwriteNotSilent() {
-        // load once
         assertTrue(cm.loadLevel(level, world, false, user, true));
-        // overwrite not silent
         assertTrue(cm.loadLevel(level, world, true, user, false));
         verify(user).getTranslation(world, "challenges.messages.load-overwriting", "[value]", "Novice");
     }
 
-    /**
-     * Test method for {@link ChallengesManager#removeFromCache(java.util.UUID)}.
-     */
-    @Ignore("This method does not do anything so there is no need to test right now.")
+    @Disabled("This method does not do anything so there is no need to test right now.")
     @Test
     public void testRemoveFromCache() {
         cm.removeFromCache(playerID);
         verify(settings).isStoreAsIslandData();
-        // TODO there should be a test where isStoreAsIslandData returns true
     }
 
-    /**
-     * Test method for {@link ChallengesManager#wipeDatabase(boolean, String)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testWipeDatabase() throws InterruptedException {
-        // Create some database
         this.testLoad();
 
-        // Verify file exists
         File chDir = new File(database, "Challenge");
         File check = new File(chDir, cName + ".json");
         assertTrue(check.exists());
@@ -370,71 +331,50 @@ public class ChallengesManagerTest {
         assertTrue(checkLv.exists());
 
         cm.setChallengeComplete(user, world, challenge, 20);
-        //cm.save();
         File plData = new File(database, "ChallengesPlayerData");
-        File checkPd = new File(plData, playerID.toString() + ".json");
+        File checkPd = new File(plData, playerID + ".json");
         assertTrue(checkPd.exists());
 
-        // Wipe it
         cm.wipeDatabase(false, "");
 
-        // Verify
         assertFalse(check.exists());
         assertFalse(checkLv.exists());
         assertTrue(checkPd.exists());
 
         cm.wipeDatabase(true, "");
-        // This fails because ChallengesPlayerData still exists
-        //assertFalse(checkPd.exists());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#wipePlayers(String)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testWipePlayers() throws InterruptedException {
         this.testLoad();
         cm.setChallengeComplete(user, world, challenge, 20);
         cm.save();
         File plData = new File(database, "ChallengesPlayerData");
-        File checkLv = new File(plData, playerID.toString() + ".json");
+        File checkLv = new File(plData, playerID + ".json");
         assertTrue(checkLv.exists());
         cm.wipePlayers("");
-        // This fails because ChallengesPlayerData still exists
-        //assertFalse(checkLv.exists());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#migrateDatabase(world.bentobox.bentobox.api.user.User, org.bukkit.World)}.
-     */
     @Test
     public void testMigrateDatabase() {
         cm.migrateDatabase(user, world);
+        verify(addon, never()).logError(anyString());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#save()}.
-     */
     @Test
     public void testSave() {
         cm.save();
+        verify(addon, never()).logError(anyString());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#saveChallenge(world.bentobox.challenges.database.object.Challenge)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testSaveChallenge() throws InterruptedException {
-        // Async - may not happen quickly
         cm.saveChallenge(challenge);
         Thread.sleep(500);
         File chDir = new File(database, "Challenge");
         assertTrue(chDir.exists());
         File check = new File(chDir, cName + ".json");
         assertTrue(check.exists());
-        // Remove icon becauseit has mockito meta in it
         removeLine(check);
     }
 
@@ -443,15 +383,13 @@ public class ChallengesManagerTest {
 
         try (BufferedReader reader = new BufferedReader(new FileReader(inputFile))) {
             try (BufferedWriter writer = new BufferedWriter(new FileWriter(tempFile))) {
-
                 String lineToRemove = "\"icon";
                 String currentLine;
 
-                while((currentLine = reader.readLine()) != null) {
-                    // trim newline when comparing with lineToRemove
+                while ((currentLine = reader.readLine()) != null) {
                     String trimmedLine = currentLine.trim();
-                    if(trimmedLine.startsWith(lineToRemove)) continue;
-                    writer.write(currentLine + System.getProperty("line.separator"));
+                    if (trimmedLine.startsWith(lineToRemove)) continue;
+                    writer.write(currentLine + System.lineSeparator());
                 }
             }
         } catch (IOException e) {
@@ -460,10 +398,7 @@ public class ChallengesManagerTest {
 
         tempFile.renameTo(inputFile);
     }
-    /**
-     * Test method for {@link ChallengesManager#saveLevel(world.bentobox.challenges.database.object.ChallengeLevel)}.
-     * @throws InterruptedException
-     */
+
     @Test
     public void testSaveLevel() throws InterruptedException {
         cm.saveLevel(level);
@@ -472,37 +407,24 @@ public class ChallengesManagerTest {
         assertTrue(chDir.exists());
         File check = new File(chDir, GAME_MODE_NAME + "_novice.json");
         assertTrue(check.exists());
-        // Remove icon becauseit has mockito meta in it
         removeLine(check);
     }
 
-    /**
-     * Test method for {@link ChallengesManager#isChallengeComplete(world.bentobox.bentobox.api.user.User, org.bukkit.World, world.bentobox.challenges.database.object.Challenge)}.
-     */
     @Test
     public void testIsChallengeCompleteUserWorldChallenge() {
         assertFalse(cm.isChallengeComplete(user, world, challenge));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#isChallengeComplete(java.util.UUID, org.bukkit.World, world.bentobox.challenges.database.object.Challenge)}.
-     */
     @Test
     public void testIsChallengeCompleteUUIDWorldChallenge() {
         assertFalse(cm.isChallengeComplete(playerID, world, challenge));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#isChallengeComplete(java.util.UUID, org.bukkit.World, java.lang.String)}.
-     */
     @Test
     public void testIsChallengeCompleteUUIDWorldString() {
         assertFalse(cm.isChallengeComplete(playerID, world, "Novice"));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#setChallengeComplete(world.bentobox.bentobox.api.user.User, org.bukkit.World, world.bentobox.challenges.database.object.Challenge, int)}.
-     */
     @Test
     public void testSetChallengeCompleteUserWorldChallengeInt() {
         cm.setChallengeComplete(user, world, challenge, 3);
@@ -510,9 +432,6 @@ public class ChallengesManagerTest {
         verify(pim).callEvent(any(ChallengeCompletedEvent.class));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#setChallengeComplete(java.util.UUID, org.bukkit.World, world.bentobox.challenges.database.object.Challenge, int)}.
-     */
     @Test
     public void testSetChallengeCompleteUUIDWorldChallengeInt() {
         cm.setChallengeComplete(playerID, world, challenge, 3);
@@ -520,9 +439,6 @@ public class ChallengesManagerTest {
         verify(pim).callEvent(any(ChallengeCompletedEvent.class));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#setChallengeComplete(java.util.UUID, org.bukkit.World, world.bentobox.challenges.database.object.Challenge, java.util.UUID)}.
-     */
     @Test
     public void testSetChallengeCompleteUUIDWorldChallengeUUID() {
         UUID adminID = UUID.randomUUID();
@@ -531,9 +447,6 @@ public class ChallengesManagerTest {
         verify(pim).callEvent(any(ChallengeCompletedEvent.class));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#resetChallenge(java.util.UUID, org.bukkit.World, world.bentobox.challenges.database.object.Challenge, java.util.UUID)}.
-     */
     @Test
     public void testResetChallenge() {
         cm.setChallengeComplete(user, world, challenge, 3);
@@ -543,9 +456,6 @@ public class ChallengesManagerTest {
         verify(pim).callEvent(any(ChallengeResetEvent.class));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#resetAllChallenges(world.bentobox.bentobox.api.user.User, org.bukkit.World)}.
-     */
     @Test
     public void testResetAllChallengesUserWorld() {
         cm.setChallengeComplete(user, world, challenge, 3);
@@ -555,9 +465,6 @@ public class ChallengesManagerTest {
         verify(pim).callEvent(any(ChallengeResetAllEvent.class));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#resetAllChallenges(java.util.UUID, org.bukkit.World, java.util.UUID)}.
-     */
     @Test
     public void testResetAllChallengesUUIDWorldUUID() {
         cm.setChallengeComplete(user, world, challenge, 3);
@@ -567,9 +474,6 @@ public class ChallengesManagerTest {
         verify(pim).callEvent(any(ChallengeResetAllEvent.class));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getChallengeTimes(world.bentobox.bentobox.api.user.User, org.bukkit.World, world.bentobox.challenges.database.object.Challenge)}.
-     */
     @Test
     public void testGetChallengeTimesUserWorldChallenge() {
         assertEquals(0L, cm.getChallengeTimes(user, world, challenge));
@@ -577,9 +481,6 @@ public class ChallengesManagerTest {
         assertEquals(6L, cm.getChallengeTimes(user, world, challenge));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getChallengeTimes(world.bentobox.bentobox.api.user.User, org.bukkit.World, java.lang.String)}.
-     */
     @Test
     public void testGetChallengeTimesUserWorldString() {
         assertEquals(0L, cm.getChallengeTimes(user, world, cName));
@@ -587,17 +488,11 @@ public class ChallengesManagerTest {
         assertEquals(6L, cm.getChallengeTimes(user, world, cName));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#isLevelCompleted(world.bentobox.bentobox.api.user.User, org.bukkit.World, world.bentobox.challenges.database.object.ChallengeLevel)}.
-     */
     @Test
     public void testIsLevelCompleted() {
         assertFalse(cm.isLevelCompleted(user, world, level));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#isLevelUnlocked(world.bentobox.bentobox.api.user.User, org.bukkit.World, world.bentobox.challenges.database.object.ChallengeLevel)}.
-     */
     @Test
     public void testIsLevelUnlocked() {
         assertFalse(cm.isLevelUnlocked(user, world, level));
@@ -605,9 +500,6 @@ public class ChallengesManagerTest {
         assertTrue(cm.isLevelUnlocked(user, world, level));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#setLevelComplete(world.bentobox.bentobox.api.user.User, org.bukkit.World, world.bentobox.challenges.database.object.ChallengeLevel)}.
-     */
     @Test
     public void testSetLevelComplete() {
         assertFalse(cm.isLevelCompleted(user, world, level));
@@ -616,48 +508,35 @@ public class ChallengesManagerTest {
         verify(pim).callEvent(any(LevelCompletedEvent.class));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#validateLevelCompletion(world.bentobox.bentobox.api.user.User, org.bukkit.World, world.bentobox.challenges.database.object.ChallengeLevel)}.
-     */
     @Test
     public void testValidateLevelCompletion() {
         assertTrue(cm.validateLevelCompletion(user, world, level));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getChallengeLevelStatus(java.util.UUID, org.bukkit.World, world.bentobox.challenges.database.object.ChallengeLevel)}.
-     */
     @Test
     public void testGetChallengeLevelStatus() {
         this.testLoadLevelNoOverwriteSilent();
         LevelStatus cls = cm.getChallengeLevelStatus(playerID, world, level);
-        assertTrue(cls.getNumberOfChallengesStillToDo() == 0);
+        assertEquals(0, cls.getNumberOfChallengesStillToDo());
         assertEquals(level, cls.getLevel());
         assertTrue(cls.isComplete());
         assertTrue(cls.isUnlocked());
         assertEquals("BSkyBlock_novice", cls.getLevel().getUniqueId());
-
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getAllChallengeLevelStatus(world.bentobox.bentobox.api.user.User, org.bukkit.World)}.
-     */
     @Test
     public void testGetAllChallengeLevelStatus() {
         this.testLoadLevelNoOverwriteSilent();
         List<LevelStatus> list = cm.getAllChallengeLevelStatus(user, world);
-        assertTrue(list.size() == 1);
-        LevelStatus cls = list.get(0);
-        assertTrue(cls.getNumberOfChallengesStillToDo() == 0);
+        assertEquals(1, list.size());
+        LevelStatus cls = list.getFirst();
+        assertEquals(0, cls.getNumberOfChallengesStillToDo());
         assertEquals(level, cls.getLevel());
         assertTrue(cls.isComplete());
         assertTrue(cls.isUnlocked());
         assertEquals("BSkyBlock_novice", cls.getLevel().getUniqueId());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getAllChallengesNames(org.bukkit.World)}.
-     */
     @Test
     public void testGetAllChallengesNames() {
         assertTrue(cm.getAllChallengesNames(world).isEmpty());
@@ -665,12 +544,9 @@ public class ChallengesManagerTest {
         cm.loadChallenge(challenge, world, false, user, true);
         List<String> list = cm.getAllChallengesNames(world);
         assertFalse(list.isEmpty());
-        assertEquals(cName, list.get(0));
+        assertEquals(cName, list.getFirst());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getAllChallenges(org.bukkit.World)}.
-     */
     @Test
     public void testGetAllChallenges() {
         assertTrue(cm.getAllChallenges(world).isEmpty());
@@ -678,50 +554,34 @@ public class ChallengesManagerTest {
         cm.loadChallenge(challenge, world, false, user, true);
         List<Challenge> list = cm.getAllChallenges(world);
         assertFalse(list.isEmpty());
-        assertEquals(challenge, list.get(0));
+        assertEquals(challenge, list.getFirst());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getFreeChallenges(org.bukkit.World)}.
-     */
     @Test
     public void testGetFreeChallenges() {
-        // Empty
         assertTrue(cm.getFreeChallenges(world).isEmpty());
-        // One normal
         cm.saveChallenge(challenge);
         cm.loadChallenge(challenge, world, false, user, true);
         assertTrue(cm.getFreeChallenges(world).isEmpty());
-        // One free
         challenge.setLevel("");
         cm.saveChallenge(challenge);
         cm.loadChallenge(challenge, world, false, user, true);
         List<Challenge> list = cm.getFreeChallenges(world);
         assertFalse(list.isEmpty());
-        assertEquals(challenge, list.get(0));
+        assertEquals(challenge, list.getFirst());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getLevelChallenges(world.bentobox.challenges.database.object.ChallengeLevel)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testGetLevelChallenges() throws InterruptedException {
         assertTrue(cm.getLevelChallenges(level).isEmpty());
-        // make some challenges
         this.testSaveLevel();
         this.testSaveChallenge();
         level.setChallenges(Collections.singleton(challenge.getUniqueId()));
-        // Test again
         List<Challenge> list = cm.getLevelChallenges(level);
         assertFalse(list.isEmpty());
-        assertEquals(challenge, list.get(0));
+        assertEquals(challenge, list.getFirst());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getChallenge(java.lang.String)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testGetChallenge() throws InterruptedException {
         assertNull(cm.getChallenge(cName));
@@ -732,17 +592,11 @@ public class ChallengesManagerTest {
         assertEquals(cName, ch.getUniqueId());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#containsChallenge(java.lang.String)}.
-     */
     @Test
     public void testContainsChallenge() {
         assertFalse(cm.containsChallenge("no-such-challenge"));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#createChallenge(java.lang.String, java.lang.String, world.bentobox.challenges.database.object.Challenge.ChallengeType, world.bentobox.challenges.database.object.requirements.Requirements)}.
-     */
     @Test
     public void testCreateChallenge() {
         @Nullable
@@ -751,10 +605,6 @@ public class ChallengesManagerTest {
         assertEquals("newChal", ch.getUniqueId());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#deleteChallenge(world.bentobox.challenges.database.object.Challenge)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testDeleteChallenge() throws InterruptedException {
         this.testSaveLevel();
@@ -767,29 +617,20 @@ public class ChallengesManagerTest {
         assertNull(ch);
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getLevels(org.bukkit.World)}.
-     */
     @Test
     public void testGetLevels() {
         this.testGetLevelString();
         List<ChallengeLevel> lvs = cm.getLevels(world);
         assertFalse(lvs.isEmpty());
-        assertEquals(level, lvs.get(0));
+        assertEquals(level, lvs.getFirst());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getLevel(world.bentobox.challenges.database.object.Challenge)}.
-     */
     @Test
     public void testGetLevelChallenge() {
         this.testGetLevelString();
         assertEquals(level, cm.getLevel(challenge));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#getLevel(java.lang.String)}.
-     */
     @Test
     public void testGetLevelString() {
         assertNull(cm.getLevel("dss"));
@@ -798,9 +639,6 @@ public class ChallengesManagerTest {
         assertEquals(level, cm.getLevel(levelName));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#containsLevel(java.lang.String)}.
-     */
     @Test
     public void testContainsLevel() {
         this.testGetLevelString();
@@ -808,10 +646,6 @@ public class ChallengesManagerTest {
         assertTrue(cm.containsLevel(levelName));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#addChallengeToLevel(world.bentobox.challenges.database.object.Challenge, world.bentobox.challenges.database.object.ChallengeLevel)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testAddChallengeToLevel() throws InterruptedException {
         this.testLoad();
@@ -821,10 +655,6 @@ public class ChallengesManagerTest {
         assertEquals(level, cm.getLevel(challenge));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#removeChallengeFromLevel(world.bentobox.challenges.database.object.Challenge, world.bentobox.challenges.database.object.ChallengeLevel)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testRemoveChallengeFromLevel() throws InterruptedException {
         this.testAddChallengeToLevel();
@@ -832,9 +662,6 @@ public class ChallengesManagerTest {
         assertFalse(cm.containsChallenge(cName));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#createLevel(java.lang.String, java.lang.String, org.bukkit.World)}.
-     */
     @Test
     public void testCreateLevel() {
         @Nullable
@@ -843,10 +670,6 @@ public class ChallengesManagerTest {
         assertEquals(world.getName(), cl.getWorld());
     }
 
-    /**
-     * Test method for {@link ChallengesManager#deleteChallengeLevel(world.bentobox.challenges.database.object.ChallengeLevel)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testDeleteChallengeLevel() throws InterruptedException {
         this.testAddChallengeToLevel();
@@ -855,10 +678,6 @@ public class ChallengesManagerTest {
         assertFalse(cm.containsLevel(levelName));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#hasAnyChallengeData(org.bukkit.World)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testHasAnyChallengeDataWorld() throws InterruptedException {
         assertFalse(cm.hasAnyChallengeData(world));
@@ -866,15 +685,345 @@ public class ChallengesManagerTest {
         assertTrue(cm.hasAnyChallengeData(world));
     }
 
-    /**
-     * Test method for {@link ChallengesManager#hasAnyChallengeData(java.lang.String)}.
-     * @throws InterruptedException
-     */
     @Test
     public void testHasAnyChallengeDataString() throws InterruptedException {
         assertFalse(cm.hasAnyChallengeData("BSkyBlock"));
         this.testLoad();
         assertTrue(cm.hasAnyChallengeData("BSkyBlock"));
+    }
+
+    // -------------------------------------------------------------------------
+    // Section: getStatisticData tests
+    // -------------------------------------------------------------------------
+
+    @Test
+    public void testGetStatisticDataPlayerOnly() {
+        Player mockPlayer = mock(Player.class);
+        when(mockPlayer.getStatistic(Statistic.JUMP)).thenReturn(42);
+        when(user.getPlayer()).thenReturn(mockPlayer);
+
+        assertEquals(42, cm.getStatisticData(user, world, Statistic.JUMP));
+    }
+
+    @Test
+    public void testGetStatisticDataIslandAggregation() {
+        settings.setStoreAsIslandData(true);
+
+        IslandsManager islandsManager = mock(IslandsManager.class);
+        when(addon.getIslands()).thenReturn(islandsManager);
+        Island island = mock(Island.class);
+        when(islandsManager.getIsland(any(World.class), any(User.class))).thenReturn(island);
+
+        UUID member1 = UUID.randomUUID();
+        UUID member2 = UUID.randomUUID();
+        when(island.getMemberSet()).thenReturn(ImmutableSet.of(member1, member2));
+
+        Player p1 = mock(Player.class);
+        Player p2 = mock(Player.class);
+        when(p1.getStatistic(Statistic.JUMP)).thenReturn(10);
+        when(p2.getStatistic(Statistic.JUMP)).thenReturn(15);
+
+        mockedBukkit.when(() -> Bukkit.getPlayer(member1)).thenReturn(p1);
+        mockedBukkit.when(() -> Bukkit.getPlayer(member2)).thenReturn(p2);
+
+        assertEquals(25, cm.getStatisticData(user, world, Statistic.JUMP));
+    }
+
+    @Test
+    public void testGetStatisticDataIslandNoIsland() {
+        settings.setStoreAsIslandData(true);
+
+        IslandsManager islandsManager = mock(IslandsManager.class);
+        when(addon.getIslands()).thenReturn(islandsManager);
+        when(islandsManager.getIsland(any(World.class), any(User.class))).thenReturn(null);
+
+        assertEquals(0, cm.getStatisticData(user, world, Statistic.JUMP));
+    }
+
+    @Test
+    public void testGetStatisticDataMaterialPlayerOnly() {
+        Player mockPlayer = mock(Player.class);
+        when(mockPlayer.getStatistic(Statistic.MINE_BLOCK, Material.DIAMOND_ORE)).thenReturn(100);
+        when(user.getPlayer()).thenReturn(mockPlayer);
+
+        assertEquals(100, cm.getStatisticData(user, world, Statistic.MINE_BLOCK, Material.DIAMOND_ORE));
+    }
+
+    @Test
+    public void testGetStatisticDataMaterialIslandAggregation() {
+        settings.setStoreAsIslandData(true);
+
+        IslandsManager islandsManager = mock(IslandsManager.class);
+        when(addon.getIslands()).thenReturn(islandsManager);
+        Island island = mock(Island.class);
+        when(islandsManager.getIsland(any(World.class), any(User.class))).thenReturn(island);
+
+        UUID member1 = UUID.randomUUID();
+        when(island.getMemberSet()).thenReturn(ImmutableSet.of(member1));
+
+        Player p1 = mock(Player.class);
+        when(p1.getStatistic(Statistic.MINE_BLOCK, Material.DIAMOND_ORE)).thenReturn(50);
+        mockedBukkit.when(() -> Bukkit.getPlayer(member1)).thenReturn(p1);
+
+        assertEquals(50, cm.getStatisticData(user, world, Statistic.MINE_BLOCK, Material.DIAMOND_ORE));
+    }
+
+    @Test
+    public void testGetStatisticDataEntityPlayerOnly() {
+        Player mockPlayer = mock(Player.class);
+        when(mockPlayer.getStatistic(Statistic.KILL_ENTITY, EntityType.ZOMBIE)).thenReturn(77);
+        when(user.getPlayer()).thenReturn(mockPlayer);
+
+        assertEquals(77, cm.getStatisticData(user, world, Statistic.KILL_ENTITY, EntityType.ZOMBIE));
+    }
+
+    @Test
+    public void testGetStatisticDataEntityIslandAggregation() {
+        settings.setStoreAsIslandData(true);
+
+        IslandsManager islandsManager = mock(IslandsManager.class);
+        when(addon.getIslands()).thenReturn(islandsManager);
+        Island island = mock(Island.class);
+        when(islandsManager.getIsland(any(World.class), any(User.class))).thenReturn(island);
+
+        UUID member1 = UUID.randomUUID();
+        UUID member2 = UUID.randomUUID();
+        when(island.getMemberSet()).thenReturn(ImmutableSet.of(member1, member2));
+
+        Player p1 = mock(Player.class);
+        Player p2 = mock(Player.class);
+        when(p1.getStatistic(Statistic.KILL_ENTITY, EntityType.ZOMBIE)).thenReturn(20);
+        when(p2.getStatistic(Statistic.KILL_ENTITY, EntityType.ZOMBIE)).thenReturn(30);
+        mockedBukkit.when(() -> Bukkit.getPlayer(member1)).thenReturn(p1);
+        mockedBukkit.when(() -> Bukkit.getPlayer(member2)).thenReturn(p2);
+
+        assertEquals(50, cm.getStatisticData(user, world, Statistic.KILL_ENTITY, EntityType.ZOMBIE));
+    }
+
+    @Test
+    public void testGetStatisticDataIslandOfflineMemberFiltered() {
+        settings.setStoreAsIslandData(true);
+
+        IslandsManager islandsManager = mock(IslandsManager.class);
+        when(addon.getIslands()).thenReturn(islandsManager);
+        Island island = mock(Island.class);
+        when(islandsManager.getIsland(any(World.class), any(User.class))).thenReturn(island);
+
+        UUID onlineMember = UUID.randomUUID();
+        UUID offlineMember = UUID.randomUUID();
+        when(island.getMemberSet()).thenReturn(ImmutableSet.of(onlineMember, offlineMember));
+
+        Player p1 = mock(Player.class);
+        when(p1.getStatistic(Statistic.JUMP)).thenReturn(10);
+        mockedBukkit.when(() -> Bukkit.getPlayer(onlineMember)).thenReturn(p1);
+        // offlineMember returns null from Bukkit.getPlayer()
+        mockedBukkit.when(() -> Bukkit.getPlayer(offlineMember)).thenReturn(null);
+
+        // Only the online member's stat should count
+        assertEquals(10, cm.getStatisticData(user, world, Statistic.JUMP));
+    }
+
+    // -------------------------------------------------------------------------
+    // Section: isBreachingTimeOut / getLastCompletionDate tests
+    // -------------------------------------------------------------------------
+
+    @Test
+    public void testIsBreachingTimeOutNoTimeout() {
+        challenge.setTimeout(0);
+        assertFalse(cm.isBreachingTimeOut(user, world, challenge));
+    }
+
+    @Test
+    public void testIsBreachingTimeOutNeverCompleted() {
+        challenge.setTimeout(60000);
+        // Never completed => lastCompletionDate=0 => 0+60000 < currentTimeMillis => false
+        assertFalse(cm.isBreachingTimeOut(user, world, challenge));
+    }
+
+    @Test
+    public void testIsBreachingTimeOutRecentCompletion() {
+        challenge.setTimeout(600000); // 10 minutes
+        cm.loadChallenge(challenge, world, false, user, true);
+        cm.setChallengeComplete(user, world, challenge, 1);
+
+        // Just completed => lastCompletionDate ~ now => now < now + 600000 => true
+        assertTrue(cm.isBreachingTimeOut(user, world, challenge));
+    }
+
+    @Test
+    public void testGetLastCompletionDateNeverCompleted() {
+        assertEquals(0L, cm.getLastCompletionDate(user, world, challenge));
+    }
+
+    @Test
+    public void testGetLastCompletionDateAfterCompletion() {
+        cm.loadChallenge(challenge, world, false, user, true);
+        long before = System.currentTimeMillis();
+        cm.setChallengeComplete(user, world, challenge, 1);
+        long after = System.currentTimeMillis();
+
+        long lastDate = cm.getLastCompletionDate(user, world, challenge);
+        assertTrue(lastDate >= before && lastDate <= after,
+                "Last completion date should be between before and after timestamps");
+    }
+
+    // -------------------------------------------------------------------------
+    // Section: Level query tests
+    // -------------------------------------------------------------------------
+
+    @Test
+    public void testGetLevelNamesEmpty() {
+        assertTrue(cm.getLevelNames(world).isEmpty());
+    }
+
+    @Test
+    public void testGetLevelNamesWithLevel() {
+        cm.loadLevel(level, world, false, user, true);
+        List<String> names = cm.getLevelNames(world);
+        assertEquals(1, names.size());
+        assertEquals(levelName, names.getFirst());
+    }
+
+    @Test
+    public void testGetLevelCount() {
+        assertEquals(0, cm.getLevelCount(world));
+        cm.loadLevel(level, world, false, user, true);
+        assertEquals(1, cm.getLevelCount(world));
+    }
+
+    @Test
+    public void testIsLastLevelSingleLevel() {
+        cm.loadLevel(level, world, false, user, true);
+        assertTrue(cm.isLastLevel(level, world));
+    }
+
+    @Test
+    public void testIsLastLevelMultipleLevels() {
+        cm.loadLevel(level, world, false, user, true);
+
+        ChallengeLevel level2 = new ChallengeLevel();
+        level2.setUniqueId(GAME_MODE_NAME + "_expert");
+        level2.setFriendlyName("Expert");
+        level2.setOrder(10);
+        cm.loadLevel(level2, world, false, user, true);
+
+        assertFalse(cm.isLastLevel(level, world));
+        assertTrue(cm.isLastLevel(level2, world));
+    }
+
+    @Test
+    public void testGetLatestUnlockedLevelNoLevels() {
+        assertNull(cm.getLatestUnlockedLevel(user, world));
+    }
+
+    @Test
+    public void testGetLatestUnlockedLevelSingleLevel() {
+        cm.loadLevel(level, world, false, user, true);
+        // With a single unlocked level, previousLevel is null for the first status
+        ChallengeLevel result = cm.getLatestUnlockedLevel(user, world);
+        assertNull(result);
+    }
+
+    // -------------------------------------------------------------------------
+    // Section: Challenge/Level count tests
+    // -------------------------------------------------------------------------
+
+    @Test
+    public void testGetChallengeCountEmpty() {
+        assertEquals(0, cm.getChallengeCount(world));
+    }
+
+    @Test
+    public void testGetChallengeCountWithChallenge() {
+        challenge.setDeployed(true);
+        cm.loadChallenge(challenge, world, false, user, true);
+        assertEquals(1, cm.getChallengeCount(world));
+    }
+
+    @Test
+    public void testGetChallengeCountUndeployedExcluded() {
+        challenge.setDeployed(false);
+        settings.setIncludeUndeployed(false);
+        cm.loadChallenge(challenge, world, false, user, true);
+        assertEquals(0, cm.getChallengeCount(world));
+    }
+
+    @Test
+    public void testGetChallengeCountUndeployedIncluded() {
+        challenge.setDeployed(false);
+        settings.setIncludeUndeployed(true);
+        cm.loadChallenge(challenge, world, false, user, true);
+        assertEquals(1, cm.getChallengeCount(world));
+    }
+
+    @Test
+    public void testGetCompletedChallengeCountNone() {
+        cm.loadChallenge(challenge, world, false, user, true);
+        assertEquals(0L, cm.getCompletedChallengeCount(user, world));
+    }
+
+    @Test
+    public void testGetCompletedChallengeCountOne() {
+        cm.loadChallenge(challenge, world, false, user, true);
+        cm.setChallengeComplete(user, world, challenge, 1);
+        assertEquals(1L, cm.getCompletedChallengeCount(user, world));
+    }
+
+    @Test
+    public void testGetTotalChallengeCompletionCountZero() {
+        cm.loadChallenge(challenge, world, false, user, true);
+        assertEquals(0L, cm.getTotalChallengeCompletionCount(user, world));
+    }
+
+    @Test
+    public void testGetTotalChallengeCompletionCountMultiple() {
+        cm.loadChallenge(challenge, world, false, user, true);
+        cm.setChallengeComplete(user, world, challenge, 5);
+        assertEquals(5L, cm.getTotalChallengeCompletionCount(user, world));
+    }
+
+    @Test
+    public void testGetLevelCompletedChallengeCountNone() {
+        cm.loadLevel(level, world, false, user, true);
+        cm.loadChallenge(challenge, world, false, user, true);
+        level.setChallenges(Collections.singleton(challenge.getUniqueId()));
+        assertEquals(0L, cm.getLevelCompletedChallengeCount(user, world, level));
+    }
+
+    @Test
+    public void testGetLevelCompletedChallengeCountOne() {
+        cm.loadLevel(level, world, false, user, true);
+        cm.loadChallenge(challenge, world, false, user, true);
+        level.setChallenges(Collections.singleton(challenge.getUniqueId()));
+        cm.setChallengeComplete(user, world, challenge, 1);
+        assertEquals(1L, cm.getLevelCompletedChallengeCount(user, world, level));
+    }
+
+    @Test
+    public void testGetCompletedLevelCountNone() {
+        // A level with no challenges is considered complete, so with one empty level
+        // the completed count is 1
+        cm.loadLevel(level, world, false, user, true);
+        assertEquals(1L, cm.getCompletedLevelCount(user, world));
+    }
+
+    @Test
+    public void testGetCompletedLevelCountOne() {
+        cm.loadLevel(level, world, false, user, true);
+        cm.setLevelComplete(user, world, level);
+        assertEquals(1L, cm.getCompletedLevelCount(user, world));
+    }
+
+    @Test
+    public void testGetUnlockedLevelCountEmpty() {
+        assertEquals(0L, cm.getUnlockedLevelCount(user, world));
+    }
+
+    @Test
+    public void testGetUnlockedLevelCountWithLevel() {
+        cm.loadLevel(level, world, false, user, true);
+        // First level is always unlocked
+        assertEquals(1L, cm.getUnlockedLevelCount(user, world));
     }
 
 }
